T2-2115 Avoid using java.net.URL where feasable
git-svn-id: https://taverna.googlecode.com/svn/taverna/ui/net.sf.taverna.t2.ui-impl/branches/maintenance@16477 bf327186-88b3-11dd-a302-d386e5130c1c